--- a/Ingenio.PortalWebExterno/Web.config
+++ b/Ingenio.PortalWebExterno/Web.config
@@ -26,7 +26,7 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="email" value = "webmaster@cofinal.com.co" />
-    <add key="pss" value = "Cofinal2525+" />
+    <add key="pss" value = "Sistemas2023+" />
     <add key="smtp" value="secure.emailsrvr.com" />
     <add key="port" value="587" />
     <add key="emailtesoreria" value="servicioalasociado@cofinal.com.co" />
