--- a/Ingenio.PortalWebExterno/Ingenio.PortalWebExterno.csproj
+++ b/Ingenio.PortalWebExterno/Ingenio.PortalWebExterno.csproj
@@ -438,6 +438,15 @@
     <Content Include="img\fondos\Nuestra Coop.jpg" />
     <Content Include="img\fproject_4_1_mona.jpg" />
     <Content Include="img\iempresarial.jpg" />
+    <Content Include="img\Img_Web2\1.jpg" />
+    <Content Include="img\Img_Web2\2.jpg" />
+    <Content Include="img\Img_Web2\3.jpg" />
+    <Content Include="img\Img_Web2\4.jpg" />
+    <Content Include="img\Img_Web2\5.jpg" />
+    <Content Include="img\Img_Web2\6.jpg" />
+    <Content Include="img\Img_Web2\background-credito.jpg" />
+    <Content Include="img\Img_Web2\Fotografia_edificio.png" />
+    <Content Include="img\Img_Web2\logo_mini.png" />
     <Content Include="img\libranzav2.png" />
     <Content Include="img\Logo Semilla.jpg" />
     <Content Include="img\logo vig.png" />
@@ -613,11 +622,11 @@
     <Content Include="Formatos\Doc Dian\7CERTIFICACION RL ANTECEDENTES DIRECTIVOS.pdf" />
     <Content Include="Formatos\Doc Dian\8EROGACIONES DIRECTIVOS 2018.pdf" />
     <Content Include="Formatos\Doc Dian\9ESTATUTOS COFINAL JULIO 2016.pdf" />
-    <Content Include="Content\sass\prueba.scss" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
+    <Content Include="Content\sass\prueba.scss" />
     <None Include="PortaWeb.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
@@ -776,6 +785,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="edithtml\" />
     <Folder Include="Estilos\" />
+    <Folder Include="img\Img_Web2\App_LocalResources\" />
     <Folder Include="Publicacion\" />
     <Folder Include="Views\Error\" />
     <Folder Include="Views\Silder\" />
