--- a/Ingenio.PortalWebExterno/compilerconfig.json
+++ b/Ingenio.PortalWebExterno/compilerconfig.json
@@ -4,7 +4,15 @@
     "inputFile": "Content/prueba.scss"
   },
   {
+    "outputFile": "Content/sass/StyleSheet1.css",
+    "inputFile": "Content/sass/StyleSheet1.scss"
+  },
+  {
     "outputFile": "Content/sass/prueba.css",
     "inputFile": "Content/sass/prueba.scss"
+  },
+  {
+    "outputFile": "Content/sass/prueba1.css",
+    "inputFile": "Content/sass/prueba1.scss"
   }
 ]
