--- a/Ingenio.PortalWebExterno/Ingenio.PortalWebExterno.csproj
+++ b/Ingenio.PortalWebExterno/Ingenio.PortalWebExterno.csproj
@@ -338,11 +338,11 @@
     <Content Include="Content\images\ui-icons_ffd27a_256x240.png" />
     <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\jquery-ui.min.css" />
-    <Content Include="Content\sass\prueba.css">
-      <DependentUpon>prueba.scss</DependentUpon>
+    <Content Include="Content\sass\main_style.css">
+      <DependentUpon>main_style.scss</DependentUpon>
     </Content>
-    <Content Include="Content\sass\prueba.min.css">
-      <DependentUpon>prueba.css</DependentUpon>
+    <Content Include="Content\sass\main_style.min.css">
+      <DependentUpon>main_style.css</DependentUpon>
     </Content>
     <Content Include="Content\skin.min.css" />
     <Content Include="Content\style.amarillo.css" />
@@ -637,7 +637,7 @@
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
-    <Content Include="Content\sass\prueba.scss" />
+    <Content Include="Content\sass\main_style.scss" />
     <Content Include="Content\sass\abstracts\_colors.scss" />
     <Content Include="Content\sass\abstracts\_fonts.scss" />
     <Content Include="Content\sass\components\_button.scss" />
