--- a/Ingenio.PortalWebExterno/Web.config
+++ b/Ingenio.PortalWebExterno/Web.config
@@ -25,14 +25,15 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="email" value="webmaster@cofinal.com.co" />
-    <add key="pss" value="Sistemas2023+" />
-    <add key="smtp" value="secure.emailsrvr.com" />
+    <add key="email" value="cofinalweb@gmail.com" />
+    <add key="pss" value="Tecno1964++" />
+    <add key="smtp" value="smtp.gmail.com" />
     <add key="port" value="587" />
     <add key="emailtesoreria" value="servicioalasociado@cofinal.com.co" />
     <add key="emailmercadeo" value="servicioalasociado@cofinal.com.co" />
     <add key="emailcontactanos" value="servicioalasociado@cofinal.com.co" />
     <add key="emailcontactanosCofinal" value="servicioalasociado@cofinal.com.co" />
+	<add key="emailprueba" value="auxsistemas@cofinal.com.co"/>
     <add key="httpurl" value="https://www.cofinal.com.co" />
     <!-- Con está opción especificamos que ASP.NET utilice la validación no intrusiva, evitando que inserte código de javascript en linea en todas las páginas de nuestra web -->
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
